# dive-stopwatch

./: .gitignore  README.md  dive_stopwatch.py  pyproject.toml
docs/: AGENT_SWEEP_PLAN.md  AIR.csv  AIR_O2.csv  COCKPIT_TYPE_SYSTEM.md  CSV_BOUNDARY_AUDIT.md  Caisson_engine_V2_Mixed_Gas_notes.txt  ENGINE_GOLDEN_PATHS.md  ENGINE_V2_METHOD_REFERENCE.md  ENGINE_V2_MIXED_GAS_TABLE_SCHEMA.md  ENGINE_V2_RUNTIME_CALL_GRAPHS.md  ENGINE_VALIDATION_PROTOCOL.md  HARDENING_PLAN.md  MANUAL_APP_MISMATCH_AUDIT.md  MODE_PROFILE_REFACTOR_SPEC.md  RULE_TRACEABILITY_MATRIX.md  RULE_core_definitions.md  RULE_delay_corrections.md  RULE_display_and_timer_semantics.md  SCENARIO_30fsw_air_break.md  SCENARIO_TEMPLATE.md  SCENARIO_air_80_50.md  SCENARIO_air_o2_150_40.md  SCENARIO_delay_boundaries.md  SCENARIO_exact_30min_o2_threshold.md  SCENARIO_first_o2_stop_after_air_stop.md  SCENARIO_first_o2_stop_from_bottom.md  SCENARIO_mixed_stop_anchor_chain.md  SCENARIO_no_d_boundary_crossover.md  SCENARIO_terminal_20fsw_air_break.md  SOURCE_OF_TRUTH.md  SURFACE_ENGINE_DRAFT.md  V2_PARITY_MATRIX.md  air_decompression_air.csv  air_decompression_air_o2.csv  air_decompression_template.csv  notes_dive_model.py
scripts/: build_cockpit_font.py  package_cockpit_font.py
tests/: __init__.py  test_air_o2_procedure.py  test_core_engine.py  test_core_profiles.py  test_delay_rules.py  test_depth_estimation.py  test_dive_mode.py  test_dive_session.py  test_minimal_engine.py  test_minimal_profiles.py  test_profile_helpers.py  test_stopwatch.py  test_surd_engine.py  test_tables.py  test_v2_decision_resolver.py  (+6 more)
(+213 files in other folders)
