[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dive-stopwatch"
version = "0.1.0"
description = "Python stopwatch prototype for a dive computer workflow."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mobile = ["flet[all]>=0.28,<0.29"]

[project.scripts]
dive-stopwatch = "dive_stopwatch.minimal:main"
dive-stopwatch-mobile = "dive_stopwatch.mobile.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
